<resources>
    <string name="app_name">STUBO</string>
    <string name="facebook_app_id">327409504877901</string>
    <string name="fb_login_protocol_scheme">fb327409504877901</string>
    <string name="trang_chu">Trang Chủ</string>
    <string name="danh_muc">Danh Mục</string>
    <string name="tu_sach">Tủ Sách</string>
    <string name="hoat_dong">Hoạt Động</string>
    <string name="ca_nhan">Cá Nhân</string>
    <string name="nhan_back">Nhấn thêm 1 lần nữa để thoát !</string>
    <string name="xem_tat_ca">Xem tất cả </string>
    <string name="sach_moi">Sách Mới</string>
    <string name="khuyen_doc">Sách Khuyên đọc</string>
    <string name="van_hoc_trongnuoc">Văn Học Trong Nước</string>
    <string name="nha_xuat_ban">Nhà Xuất Bản</string>
    <string name="album_sach">Bộ Sách Hay Nhất</string>
    <string name="doc_sach">Đọc Sách</string>
    <string name="tom_tat_noi_dung">Nội dung sách</string>
    <string name="chia_se_cam_nhan">Chia sẻ cảm nhận</string>
    <string name="binh_luan">Bình Luận</string>
    <string name="xem_them_nhan_xet">Xem thêm nhận xét</string>
    <string name="ten_tac_gia">Tác giả:</string>
    <string name="nha_xuat_ban_kitu">NXB:</string>
    <string name="ngay_phat_hanh">Ngày phát hành:</string>
    <string name="so_trang">Số trang:</string>
    <string name="viet_nam_dong">vnđ</string>
    <string name="chi_tiet_sach">Chi tiết sách</string>
    <string name="danh_gia">Đánh Giá</string>
    <string name="noi_dung">Nội dung</string>
    <string name="gui_danh_gia">Gửi đánh giá</string>
    <string name="nhan_xet_khac">Nhận xét khác</string>
    <string name="thanh_toan">Thanh Toán</string>
    <string name="hoac">Hoặc</string>
    <string name="goi_thue">Gói Thuê</string>
    <string name="tieu_de_thanh_toan">Bạn có thể chọn các hình thức mua sách dưới đây </string>
    <string name="muoihai_thang"> 12 Tháng</string>
    <string name="toi_uu">Lựa chọn tối ưu cho bạn đọc</string>
    <string name="ba_thang"> 3 Tháng</string>
    <string name="thanh_toan_qua">Thanh Toán qua.....</string>
    <string name="sau_thang"> 6 Tháng</string>
    <string name="uu_dai">Lựa chọn ưu đãi cho bạn đọc</string>
    <string name="mua_ngay">Mua ngay</string>
    <string name="thoi_han">Thời hạn:</string>
    <string name="gia_tien">Giá tiền:</string>
    <string name="so_du">Số dư:</string>
    <string name="tinh_trang">Tình trạng:</string>
    <string name="say_yes">Đồng ý</string>
    <string name="say_no">Hủy</string>
    <string name="chon_goi_mua_sach">Chọn gói mua</string>
    <string name="xac_nhan">Xác nhận thanh toán</string>
    <string name="tai_khoan_co">Tài khoản có:</string>
    <string name="thanh_toan_cho_time">Thanh toán cho:</string>
    <string name="thanh_toan_bang_xu">Thanh toán bằng ví</string>
    <string name="thanh_toan_bang_momo">Thanh toán qua PayPal</string>
    <string name="thanh_toan_qua_the_cao">Thanh toán bằng thẻ cào</string>
    <string name="thanh_toan_huy">Hủy thanh toán</string>
    <string name="thanh_toan_that_bai">Thanh toán thất bại</string>
    <string name="thanh_toan_thanh_cong">Thanh toán thành công</string>
    <string name="vinh_vien">Vĩnh viễn</string>
    <string name="so_du_taikhoan">Số Dư</string>
    <string name="sach">Sách đã mua</string>
    <string name="nguoi_theo_doi">Người theo dõi bạn</string>
    <string name="nguoi_dang_theo_doi">Người bạn đang theo dõi</string>
    <string name="nap_tai_khoan">Nạp tài khoản</string>
    <string name="sach_da_doc">Sách đã đọc</string>
    <string name="sach_yeu_thich">Sách yêu thích</string>
    <string name="lich_su_giao_dich">Lịch sử giao dịch</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="user_name">Tên đăng nhập</string>
    <string name="user_name_register">Tên đăng nhập (*)</string>
    <string name="password">Mật khẩu</string>
    <string name="password_register">Mật khẩu (*)</string>
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="re_password_register">Nhập lại mật khẩu (*)</string>
    <string name="login">Đăng Nhập</string>
    <string name="register">Đăng Kí</string>
    <string name="quen_mat_khau">Quên mật khẩu?</string>
    <string name="dang_ky_ngay">Đăng ký ngay</string>
    <string name="Nhap_email">Nhập email (*)</string>
    <string name="gui">Gửi</string>
    <string name="night_mode">Chế độ</string>
    <string name="zoom_in">Phóng to</string>
    <string name="zoom_out">Thu Nhỏ</string>
    <string name="xoay">Xoay</string>
    <string name="page">Trang</string>
    <string name="chuongsach">Chương Sách</string>
    <string name="trang_da_luu">Trang Đã lưu</string>
    <string name="ngay">Ngày</string>
    <string name="internet">Internet không hiện có, nhấp thử lại !</string>
    <string name="openinternet">Bạn cần có Internet để thực hiện chức năng này!</string>
    <string name="openinternet_readbook">Bạn cần có Internet để tải sách!</string>
    <string name="notempty">Vui lòng không bỏ trống!</string>
    <string name="taisach">Đang tải sách, vui lòng chờ !</string>
    <string name="vuilongcho">Vui lòng chờ !</string>
    <string name="taisachthanhcong">Tải sách thành công</string>
    <string name="taisachthatbai">Tải Sách thất bại</string>
    <string name="dangkithatbai">Đăng kí thất bại!</string>
    <string name="dangkithanhcong">Đăng kí thành công</string>
    <string name="matcheremailsdt">Địa chỉ email không đúng!</string>
    <string name="matkhaulonhon5">Mật khẩu phải lớn hơn 5 kí tự</string>
    <string name="matkhaunhaplai">Mật khẩu nhập lại không đúng !</string>
    <string name="maxacnhan">Mã xác minh số điện thoại không đúng !</string>
    <string name="nhapmaxacthuc">Nhập mã xác thực điện thoại tại đây</string>
    <string name="dangnhapthanhcong">Đăng nhập thành công!</string>
    <string name="dangnhapthatbai">Đăng nhập thất bại!</string>
    <string name="resetpass">Vui lòng kiểm tra mail để đổi mật khẩu !</string>
    <string name="dangtaidulieu">Đang tải dữ liệu !</string>
    <string name="sachtuongtu">Sách cùng thể loại</string>
    <string name="vuilongnhapsosao">Vui lòng đánh giá số sao !</string>
    <string name="binhluanthanhcong">Bình luận thành công</string>
    <string name="damua">Đã mua</string>
    <string name="dadoc">Đã đọc:</string>
    <string name="dathue">Đọc theo gói thuê</string>
    <string name="khongdutaikhoan">Không thể thanh toán</string>
    <string name="cothethanhtoan">Có thể thanh toán</string>
    <string name="title_activity_nap_tai_khoan">NapTaiKhoan</string>
    <string name="nhap_tien">Nhập số tiền muốn nạp</string>
    <string name="nap_qua_paypal">Nạp tài khoản qua PayPal</string>
    <string name="nap_cho_tai_khoan">Nạp tiền vào tài khoản: </string>
    <string name="thong_tin_thanh_toan">Thông tin thanh toán</string>
    <string name="id_paypal">Mã thanh toán: </string>
    <string name="trang_thai">Trạng thái thanh toán: </string>
    <string name="so_tien_da_nap">Số tiền thanh toán: </string>
    <string name="mua_sach_thanh_cong">Mua sách thành công!</string>
    <string name="content_mua_thanh_cong_vi_1">Bạn đã mua thành công sách </string>
    <string name="content_mua_thanh_cong_vi_2">Số tiền đã thanh toán: </string>
    <string name="content_mua_thanh_cong_vi_3">Mã giao dịch: </string>
    <string name="content_thue_thanh_cong_vi_1">Mua gói thuê thành công! </string>
    <string name="content_thue_thanh_cong_vi_2">Bạn đã mua gói đọc sách:</string>
    <string name="content_thue_thanh_cong_vi_3">Số tiền đã thanh toán: </string>
    <string name="nap_tien_thanh_cong">Nạp tiền thành công!</string>
    <string name="content_nap_thanh_cong_vi_1">Bạn đã nạp vào tài khoản thành công với số tiền:</string>
    <string name="content_nap_thanh_cong_vi_2">Mã giao dịch:</string>
    <string name="ten">Tên:</string>
    <string name="sdt">SĐT:</string>
    <string name="email">Email: </string>
    <string name="nhap_ten">Nhập tên</string>
    <string name="nhap_sdt">Nhập số điện thoại</string>
    <string name="nhap_email">Nhập email</string>
    <string name="cap_nhat">Cập nhật</string>
    <string name="cap_nhat_thong_tin_user">Cập nhật thông tin người dùng</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="chon_ngay">Chọn ngày sinh</string>
    <string name="cap_nhat_thanh_cong">Cập nhật thành công!</string>
    <string name="khong_bo_trong_ho_ten">Vui lòng không bỏ trống họ tên!</string>
    <string name="anh_dai_dien">Ảnh đại diện</string>
    <string name="chon_tu_thu_vien">Chọn từ thư viện</string>
    <string name="chup_tu_may_anh">Chụp từ máy ảnh</string>
    <string name="moi_nguoi_doc_gi">Mọi người đang đọc gì</string>
    <string name="ngay_tao">Ngày tham gia:</string>
    <string name="da_theo_doi">Đã theo dõi</string>
    <string name="theo_doi">Theo dõi</string>
    <string name="huy_theo_doi">Hủy theo dõi</string>
    <string name="ket_thuc">Kết thúc</string>
    <string name="khong_tim_thay_ban_be">Không tìm thấy kết quả!</string>
    <string name="huy_theo_doi_ban_be">Đã hủy theo dõi</string>
    <string name="ban_co_muon_dang_xuat">Bạn có muốn đăng xuất?</string>
    <string name="goithuecanhan">Gói Thuê</string>
    <string name="thoihanthue">Thời hạn còn lại:</string>
    <string name="banchuamuagoithue">Bạn chưa mua gói thuê</string>
    <string name="hethanthue">Hết hạn thuê</string>
    <string name="muagoithue">Mua Gói Thuê</string>
    <string name="thongtingoithue">Thông tin gói thuê</string>
</resources>
