<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:text="@string/anh_dai_dien"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorPrimary"></View>
    <Button
        android:id="@+id/chonanhtuthuvien"
        android:background="@drawable/border_layout_themnhanxet"
        android:text="@string/chon_tu_thu_vien"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/chuptumayanh"
        android:text="@string/chup_tu_may_anh"
        android:background="@drawable/border_layout_themnhanxet"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>