<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".View.Activity.CapNhatThongTinUser">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            app:titleTextColor="@color/colorPrimary"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white">
        </androidx.appcompat.widget.Toolbar>
        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/edittext_nhapten"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/nhap_ten"
        android:inputType="textPersonName"
        />

        <RadioGroup
            android:id="@+id/gioitinh"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/nam"
                android:text="@string/nam"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <RadioButton
                android:id="@+id/nu"
                android:text="@string/nu"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </RadioGroup>

    <EditText
        android:id="@+id/edittext_nhapsdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/nhap_sdt"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintTop_toBottomOf="@+id/edittext_nhapten" />

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/texview_ngaysinh"
            android:layout_weight="2"
            android:gravity="center"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/button_chonngaysinh"
            android:background="@color/colorPrimary"
            android:layout_weight="4"
            android:textColor="@color/white"
            android:text="@string/chon_ngay"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:enabled="false"
        android:id="@+id/edittext_nhapeamail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/nhap_email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintTop_toBottomOf="@+id/edittext_nhapsdt"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:id="@+id/button_capnhatthongtin"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cap_nhat"
        />

</LinearLayout>